--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -28,7 +28,7 @@
   }
 }
 
-@media (max-width: $mobileL) {
+@media (max-width: $mobileM) {
   .button {
     font-size: 14px;
   }
