--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -8,6 +8,7 @@
 
   color: $white;
 
+  background: linear-gradient(rgba(10, 10, 10, .7),  rgba(10, 10, 10, 0));
   transition: 0.3s;
 
   &_onMain {
